--- a/firmware/common/Makefile.common
+++ b/firmware/common/Makefile.common
@@ -8,7 +8,7 @@
 VERSION_NUM := 25
 
 # This is the user visible string for the version
-VERSION_STRING := 0.20.1
+VERSION_STRING := 0.20.1C-2
 
 # This is the expected version of the motor firmware. Display will stop to work with correct TSDZ2 firmware version
 TSDZ2_FIRMWARE_MAJOR := 0
