--- a/firmware/common/Makefile.common
+++ b/firmware/common/Makefile.common
@@ -8,10 +8,10 @@
 VERSION_NUM := 25
 
 # This is the user visible string for the version
-VERSION_STRING := 0.20.1C-2
+VERSION_STRING := 20.1C.V13.22BH
 
 # This is the expected version of the motor firmware. Display will stop to work with correct TSDZ2 firmware version
-TSDZ2_FIRMWARE_MAJOR := 0
-TSDZ2_FIRMWARE_MINOR := 20
+TSDZ2_FIRMWARE_MAJOR := 20
+TSDZ2_FIRMWARE_MINOR := 13
 
 CFLAGS += -DVERSION_STRING=\"$(VERSION_STRING)\" -DTSDZ2_FIRMWARE_MAJOR=\"$(TSDZ2_FIRMWARE_MAJOR)\" -DTSDZ2_FIRMWARE_MINOR=\"$(TSDZ2_FIRMWARE_MINOR)\"
